--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,9 @@
-HOME PAGE
+{% extends '_base.html' %}
+
+{% block page_title %}
+Home Page
+{% endblock %}
+
+{% block content %}
+<h1>Home Page</h1>
+{% endblock %}
