--- a/templates/_base.html
+++ b/templates/_base.html
@@ -12,7 +12,6 @@
     <title>{% block page_title %}{% endblock %}</title>
 </head>
 <body>
-
 {% block content %}
 
 {% endblock %}
@@ -31,3 +30,11 @@
 -->
 </body>
 </html>
+{#<nav>#}
+{#    {% if user.is_authenticated %}#}
+{#        <form action="{% url 'logout' %}" method="post">#}
+{#            {% csrf_token %}#}
+{#            <button type="button">Log out</button>#}
+{#        </form>#}
+{#    {% endif %}#}
+{#</nav>#}
